Fixed page alignment issues

--- a/src/App/About/About.scss
+++ b/src/App/About/About.scss
@@ -1,8 +1,5 @@
 [data-view="neon-extension-core:about"] {
-  float: left;
-  width: 100%;
-
-  padding: 25px;
+  padding: 8px;
 
   .build {
     padding: 15px 0;
